MWPW-182446 - Add partial star rating support to PDP block

--- a/express/code/blocks/print-product-detail/print-product-detail.css
+++ b/express/code/blocks/print-product-detail/print-product-detail.css
@@ -139,7 +139,22 @@
   }
   .pdpx-star-ratings {
     display: flex;
-    align-self: anchor-center;
+    align-items: center;
+    gap: var(--figma-spacing-50);
+  }
+  .pdpx-star-ratings svg {
+    width: 17px;
+    height: 17px;
+    flex-shrink: 0;
+  }
+  .pdpx-star-ratings .icon-star {
+    color: var(--color-black);
+  }
+  .pdpx-star-ratings .icon-star-half {
+    color: var(--color-black);
+  }
+  .pdpx-star-ratings .icon-star-empty {
+    color: var(--color-gray-300);
   }
   .pdpx-ratings-number {
     font-weight: 700;
