refactor: move .visually-hidden utility to styles.css for global reuse

--- a/express/code/styles/styles.css
+++ b/express/code/styles/styles.css
@@ -1762,3 +1762,15 @@ main .section.zero-margin:not([data-padding='none']) .content:first-child {
   font-size: var(--ax-detail-s-size);
   line-height: var(--ax-detail-s-lh);
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
