--- a/express/code/scripts/widgets/picker.css
+++ b/express/code/scripts/widgets/picker.css
@@ -27,6 +27,7 @@
   height: 32px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 6px;
   padding-left: 12px;
   padding-right: 11px;
@@ -50,16 +51,12 @@
 }
 
 .picker-current-value {
-  flex: 1 1 0;
-  min-width: 0;
   font-family: var(--body-font-family);
   font-size: var(--spacing-250);
   font-weight: 400;
   line-height: var(--spacing-350);
   color: var(--color-gray-800-variant);
-  text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
 }
 
 .picker-chevron {
@@ -82,7 +79,7 @@
   position: absolute;
   top: calc(100% + 6px);
   left: 0;
-  width: 100%;
+  width: max-content;
   background-color: var(--color-white);
   border-radius: 10px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12),
@@ -178,8 +175,8 @@
   display: flex;
   flex-direction: column;
   gap: 0;
-  width: 100%;
   position: relative;
+  max-width: 208px;
 }
 
 .picker-container.side .picker-wrapper {
