--- a/express/code/blocks/print-product-detail/print-product-detail.css
+++ b/express/code/blocks/print-product-detail/print-product-detail.css
@@ -618,6 +618,7 @@ main .section .pdpx-drawer-description {
   overflow: visible;
   padding-top: 60px;
   margin-top: -60px;
+  pointer-events: none;
   .simple-carousel-container {
     position: relative;
     width: 100%;
@@ -626,6 +627,7 @@ main .section .pdpx-drawer-description {
   .simple-carousel-platform {
     display: flex;
     gap: var(--spacing-75);
+    pointer-events: auto;
   }
   .simple-carousel-fader-left,
   .simple-carousel-fader-right {
