--- a/express/code/blocks/print-product-detail/print-product-detail.css
+++ b/express/code/blocks/print-product-detail/print-product-detail.css
@@ -130,6 +130,8 @@
   gap: var(--spacing-75);
   .pdpx-product-info-header-ratings-star {
     width: 17px;
+    height: 17px;
+    aspect-ratio: 1/1;
   }
   .pdpx-star-ratings {
     display: flex;
@@ -193,6 +195,13 @@
       background-color: transparent;
       padding: 0;
       cursor: pointer;
+    .pdpx-image-thumbnail-carousel-item-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      aspect-ratio: 1/1;
+    }  
     }
     .pdpx-image-thumbnail-carousel-item.selected {
       border: 1px solid var(--color-background-accent-default);
