--- a/express/code/blocks/collapsible-rows/collapsible-rows.css
+++ b/express/code/blocks/collapsible-rows/collapsible-rows.css
@@ -119,7 +119,7 @@
     padding-left: 6px;
 }
 .collapsible-row-header.expandable:not([class*='heading-']):not([class*='body-']):not([class*='detail-']) {
-    font-size: 16px;
+    font-size: var(--body-font-size-m);
     font-weight: 700;
 }
 .collapsible-row-accordion.expandable .toggle-icon {
