--- a/express/code/blocks/collapsible-rows/collapsible-rows.css
+++ b/express/code/blocks/collapsible-rows/collapsible-rows.css
@@ -132,7 +132,7 @@
     padding-left: 6px;
 }
 .collapsible-row-sub-header.expandable:not([class*='heading-']):not([class*='body-']):not([class*='detail-']) {
-    font-size: 16px;
+    font-size: var(--body-font-size-m);
     font-weight: 400;
 }
 .collapsible-row-accordion.title {
