--- a/express/code/blocks/print-product-detail/print-product-detail.css
+++ b/express/code/blocks/print-product-detail/print-product-detail.css
@@ -28,7 +28,7 @@
 .pdpx-global-container {
   max-width: 1440px;
   margin: 0 auto;
-  padding: var(--spacing-400);
+  padding: var(--spacing-300);
   display: flex;
   flex-direction: column;
   gap: var(--spacing-300);
@@ -201,13 +201,13 @@
       background-color: transparent;
       padding: 0;
       cursor: pointer;
-    .pdpx-image-thumbnail-carousel-item-image {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-      aspect-ratio: 1/1;
-    }  
+      .pdpx-image-thumbnail-carousel-item-image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        aspect-ratio: 1/1;
+      }
     }
     .pdpx-image-thumbnail-carousel-item.selected {
       border: 1px solid var(--color-background-accent-default);
@@ -301,6 +301,9 @@ main .pdpx-checkout-button-subhead a.pdpx-checkout-button-subhead-link {
     gap: var(--spacing-100);
     width: 50%;
     justify-content: center;
+    .pdpx-assurance-lockup-item-text {
+      white-space: nowrap;
+    }
   }
 }
 /* END CHECKOUT BUTTON */
@@ -524,6 +527,7 @@ main .section .pdpx-drawer-description {
   gap: 0px;
 }
 .pdpx-pill-selector-label-compare-link {
+  font-family: var(--body-font-family);
   background: transparent;
   font-size: 14px;
   font-weight: 500;
@@ -789,7 +793,6 @@ main .section .pdpx-drawer-description {
 }
 /*END DRAWER*/
 
-
 /* SIZE CHART */
 .pdpx-drawer-body--size-chart {
   display: flex;
@@ -913,11 +916,11 @@ main .section .pdpx-drawer-description {
 }
 /*END SIZE CHART*/
 
-
 /*TABLET*/
 @media (min-width: 600px) {
   .pdpx-global-container {
     flex-direction: row;
+    padding: var(--spacing-400);
   }
   .pdpx-product-images-container {
     order: 1;
