--- a/express/code/blocks/susi-light/susi-light.css
+++ b/express/code/blocks/susi-light/susi-light.css
@@ -29,7 +29,7 @@
   max-width: 90%;
   font-size: var(--heading-font-size-s);
   line-height: 28.6px;
-  font-weight: 900;
+  font-weight: 700;
   text-align: center;
 }
 
@@ -157,6 +157,11 @@
 .susi-light.student input[type='checkbox'] {
   width: 1rem;
   height: 1rem;
+}
+
+.susi-light.edu .subheading {
+  font-size: var(--body-font-size-s);
+  line-height: 1.3;
 }
 
 /* modal styles */
